--- a/.github/workflows/check_docker_tags.yml
+++ b/.github/workflows/check_docker_tags.yml
@@ -11,6 +11,10 @@ jobs:
   list-tags:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: read
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
