--- a/.github/workflows/check_docker_tags.yml
+++ b/.github/workflows/check_docker_tags.yml
@@ -24,5 +24,5 @@ jobs:
 
     - name: List Docker Image Tags
       run: |
-        IMAGE_NAME="delsonlima/bluefin-dx-nvidia-d3l"
-        skopeo list-tags --registry-token "${{ secrets.GITHUB_TOKEN }}" "docker://ghcr.io/${IMAGE_NAME}"
+        IMAGE_NAME="ghcr.io/delsonlima/bluefin-dx-nvidia-d3l"
+        skopeo list-tags "docker://${IMAGE_NAME}"
